@@ -1,1 +1,0 @@
-/usr/share/apport/general-hooks
