@@ -9,5 +9,6 @@ usr/share/locale
 usr/share/icons
 usr/share/mime
 usr/share/apport/package-hooks
+usr/share/apport/general-hooks
 usr/share/apport/*cli* usr/bin/
 ../local/ubuntu-bug usr/bin
