@@ -18,8 +18,10 @@ apport (0.92) UNRELEASED; urgency=low
   * bin/apport-unpack: Fix format string in error message.
   * apport/ui.py, __init__(): Intercept ImportError, which can happen for
     crashes during system upgrades. (LP: #124354)
+  * Add general-hooks/automatix.py: Refuse to send problem reports if
+    automatix is installed.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 14:16:47 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 16:12:28 +0200
 
 apport (0.91) gutsy; urgency=low
 
